<resources>
    <string name="app_name">RPG-Character-Sheet</string>
    <string name="star_wars_logo">Star Wars FFG Logo</string>

    <string-array name="ffg_characteristics">
        <item>Brawn</item>
        <item>Agility</item>
        <item>Intellect</item>
        <item>Cunning</item>
        <item>Willpower</item>
        <item>Presence</item>
    </string-array>

    <string name="char_name_hint">Character Name</string>
    <string name="species_hint">Species</string>
    <string name="career_hint">Career</string>
    <string name="brawn_hint">Brawn</string>
    <string name="agility_hint">Agility</string>
    <string name="int_hint">Intellect</string>
    <string name="cunning_hint">Cunning</string>
    <string name="will_hint">Willpower</string>
    <string name="presence_hint">Presence</string>
    <string name="add_character">Add Character</string>

    <string-array name="options">
        <item>Create Character</item>
        <item>View Characters</item>
        <item>Roll Dice</item>
        <item>About</item>
    </string-array>
    <string name="rpg_title_star_wars">Fantasy Flight Games Star Wars</string>
</resources>
